--- a/src/pages/Main/style.scss
+++ b/src/pages/Main/style.scss
@@ -1,10 +1,10 @@
 .main-page {
     background-color: black;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 
     display: grid;
     place-items: center;
 
-    color: white;
+    color: navajowhite;
 }
