Bind play fn to click single frequency

--- a/src/components/Octave/style.scss
+++ b/src/components/Octave/style.scss
@@ -47,6 +47,7 @@
         width: 36px;
         bottom: -50px;
         left: -16px;
+        cursor: pointer;
 
         display: flex;
         justify-content: center;
