--- a/src/components/Octave/style.scss
+++ b/src/components/Octave/style.scss
@@ -74,5 +74,6 @@
 }
 
 .active {
-    border: 4px solid var(--blue-low);
+    background-color: #de1f5c;
+    transition: background-color 0.15s ease;
 }
